# CursorRing

./: .gitignore  CMakeLists.txt  CursorRing.def  README.md
src/: cursor_compose.cpp  cursor_compose.h  cursor_hook.cpp  cursor_hook.h  main.cpp  options.cpp  options.h  overlay.cpp  overlay.h  settings.cpp  settings.h
